--- a/AnandDemoWPF/MVVM/MVVM/App.xaml
+++ b/AnandDemoWPF/MVVM/MVVM/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="DataBinding.App"
+﻿<Application x:Class="MVVM.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DataBinding"
-             StartupUri="INotifyPropertyChangeWindow.xaml">
+             xmlns:local="clr-namespace:MVVM"
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
